--- a/index.html
+++ b/index.html
@@ -1,48 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | FAQ accordion</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/images/favicon-32x32.png"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <title>Frontend Mentor | FAQ accordion</title>
 
-  FAQs
+    <!-- google fonts import -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <!-- stylesheet link -->
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <main>
+      <div class="faq">
+        <div class="faq__title">
+          <img
+            src="./assets/images/icon-star.svg"
+            alt="star icon"
+            class="faq__titleImg"
+          />
+          <h1 class="faq__heading">FAQs</h1>
+        </div>
+        <div class="questions">
+          <!-- single question -->
+          <article class="question">
+            <div class="question__title">
+              <p>What is Frontend Mentor, and how will it help me?</p>
+              <button type="button" class="question__btn" id="toggle">
+                <span class="plus">
+                  <img src="./assets/images/icon-plus.svg" alt="plus icon" />
+                </span>
+                <span class="minus">
+                  <img src="./assets/images/icon-minus.svg" alt="minus icon" />
+                </span>
+              </button>
+            </div>
+            <div class="question__text">
+              <p>
+                Frontend Mentor offers realistic coding challenges to help
+                developers improve their frontend coding skills with projects in
+                HTML, CSS, and JavaScript. It's suitable for all levels and
+                ideal for portfolio building.
+              </p>
+            </div>
+          </article>
+          <!-- end of single question -->
+          <!-- single question -->
+          <article class="question">
+            <div class="question__title">
+              <p>Is Frontend Mentor free?</p>
+              <button type="button" class="question__btn" id="toggle">
+                <span class="plus">
+                  <img src="./assets/images/icon-plus.svg" alt="plus icon" />
+                </span>
+                <span class="minus">
+                  <img src="./assets/images/icon-minus.svg" alt="minus icon" />
+                </span>
+              </button>
+            </div>
+            <div class="question__text">
+              <p>
+                Yes, Frontend Mentor offers both free and premium coding
+                challenges, with the free option providing access to a range of
+                projects suitable for all skill levels.
+              </p>
+            </div>
+          </article>
+          <!-- end of single question -->
+          <!-- single question -->
+          <article class="question">
+            <div class="question__title">
+              <p>Can I use Frontend Mentor projects in my portfolio?</p>
+              <button type="button" class="question__btn" id="toggle">
+                <span class="plus">
+                  <img src="./assets/images/icon-plus.svg" alt="plus icon" />
+                </span>
+                <span class="minus">
+                  <img src="./assets/images/icon-minus.svg" alt="minus icon" />
+                </span>
+              </button>
+            </div>
+            <div class="question__text">
+              <p>
+                Yes, you can use projects completed on Frontend Mentor in your
+                portfolio. It's an excellent way to showcase your skills to
+                potential employers!
+              </p>
+            </div>
+          </article>
+          <!-- end of single question -->
+          <!-- single question -->
+          <article class="question">
+            <div class="question__title">
+              <p>
+                How can I get help if I'm stuck on a Frontend Mentor challenge?
+              </p>
+              <button type="button" class="question__btn" id="toggle">
+                <span class="plus">
+                  <img src="./assets/images/icon-plus.svg" alt="plus icon" />
+                </span>
+                <span class="minus">
+                  <img src="./assets/images/icon-minus.svg" alt="minus icon" />
+                </span>
+              </button>
+            </div>
+            <div class="question__text">
+              <p>
+                The best place to get help is inside Frontend Mentor's Discord
+                community. There's a help channel where you can ask questions
+                and seek support from other community members.
+              </p>
+            </div>
+          </article>
+          <!-- end of single question -->
+        </div>
+      </div>
+    </main>
 
-  What is Frontend Mentor, and how will it help me?
-
-  Frontend Mentor offers realistic coding challenges to help developers improve their 
-  frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for 
-  all levels and ideal for portfolio building.
-
-  Is Frontend Mentor free?
-
-  Yes, Frontend Mentor offers both free and premium coding challenges, with the free 
-  option providing access to a range of projects suitable for all skill levels.
-
-  Can I use Frontend Mentor projects in my portfolio?
-
-  Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
-  way to showcase your skills to potential employers!
-
-  How can I get help if I'm stuck on a Frontend Mentor challenge?
-  
-  The best place to get help is inside Frontend Mentor's Discord community. There's a help 
-  channel where you can ask questions and seek support from other community members.
-
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <footer class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="#">Your Name Here</a>.
+    </footer>
+  </body>
 </html>
