--- a/index.html
+++ b/index.html
@@ -42,10 +42,18 @@
               <p>What is Frontend Mentor, and how will it help me?</p>
               <button type="button" class="question__btn" id="toggle">
                 <span class="plus">
-                  <img src="./assets/images/icon-plus.svg" alt="plus icon" />
+                  <img
+                    src="./assets/images/icon-plus.svg"
+                    alt="plus icon"
+                    class="btn__image"
+                  />
                 </span>
                 <span class="minus">
-                  <img src="./assets/images/icon-minus.svg" alt="minus icon" />
+                  <img
+                    src="./assets/images/icon-minus.svg"
+                    alt="minus icon"
+                    class="btn__image"
+                  />
                 </span>
               </button>
             </div>
@@ -107,7 +115,7 @@
           <article class="question">
             <div class="question__title">
               <p>
-                How can I get help if I'm stuck on a Frontend Mentor challenge?
+                How can I get help if I'm stuck on a  challenge?
               </p>
               <button type="button" class="question__btn" id="toggle">
                 <span class="plus">
@@ -135,7 +143,9 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      >. Coded by <a href="https://www.frontendmentor.io/profile/Tejiri-A">Oghenetejiri Amrasa</a>.
     </footer>
+
+    <script src="./app.js"></script>
   </body>
 </html>
