--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
         <div class="questions">
           <!-- single question -->
-          <article class="question">
+          <article class="question show-text">
             <div class="question__title">
               <p>What is Frontend Mentor, and how will it help me?</p>
               <button type="button" class="question__btn"">
