--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <article class="question show-text">
             <div class="question__title">
               <p>What is Frontend Mentor, and how will it help me?</p>
-              <button type="button" class="question__btn"">
+              <button type="button" class="question__btn">
                 <span class="plus">
                   <img
                     src="./assets/images/icon-plus.svg"
@@ -71,7 +71,7 @@
           <article class="question">
             <div class="question__title">
               <p>Is Frontend Mentor free?</p>
-              <button type="button" class="question__btn"">
+              <button type="button" class="question__btn">
                 <span class="plus">
                   <img src="./assets/images/icon-plus.svg" alt="plus icon" />
                 </span>
