--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
         <div class="questions">
           <!-- single question -->
-          <article class="question show-text">
+          <div class="question show-text">
             <div class="question__title">
               <p>What is Frontend Mentor, and how will it help me?</p>
               <button type="button" class="question__btn">
@@ -65,10 +65,10 @@
                 ideal for portfolio building.
               </p>
             </div>
-          </article>
+          </div>
           <!-- end of single question -->
           <!-- single question -->
-          <article class="question">
+          <div class="question">
             <div class="question__title">
               <p>Is Frontend Mentor free?</p>
               <button type="button" class="question__btn">
@@ -87,10 +87,10 @@
                 projects suitable for all skill levels.
               </p>
             </div>
-          </article>
+          </div>
           <!-- end of single question -->
           <!-- single question -->
-          <article class="question">
+          <div class="question">
             <div class="question__title">
               <p>Can I use Frontend Mentor projects in my portfolio?</p>
               <button type="button" class="question__btn">
@@ -109,10 +109,10 @@
                 potential employers!
               </p>
             </div>
-          </article>
+          </div>
           <!-- end of single question -->
           <!-- single question -->
-          <article class="question">
+          <div class="question">
             <div class="question__title">
               <p>
                 How can I get help if I'm stuck on a  challenge?
@@ -133,7 +133,7 @@
                 and seek support from other community members.
               </p>
             </div>
-          </article>
+          </div>
           <!-- end of single question -->
         </div>
       </div>
